--- a/dsl-prototype/package.json
+++ b/dsl-prototype/package.json
@@ -3,13 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@storybook/addon-docs": "^5.3.18",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "actions": "^1.3.0",
     "polished": "^3.6.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
+    "react-spring": "^8.0.27",
     "styled-components": "^5.1.0",
     "styled-components-modifiers": "^1.2.5"
   },
@@ -17,7 +20,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "storybook": "start-storybook -p 9009 -s public",
+    "build-storybook": "build-storybook -s public"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -33,5 +38,16 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@storybook/addon-a11y": "^5.3.19",
+    "@storybook/addon-actions": "^6.0.0-beta.13",
+    "@storybook/addon-backgrounds": "^5.3.18",
+    "@storybook/addon-contexts": "^5.3.18",
+    "@storybook/addon-knobs": "^5.3.19",
+    "@storybook/addon-links": "^6.0.0-beta.13",
+    "@storybook/addons": "^6.0.0-beta.13",
+    "@storybook/preset-create-react-app": "^3.0.0",
+    "@storybook/react": "^6.0.0-beta.13"
   }
 }
