--- a/dsl-prototype/package.json
+++ b/dsl-prototype/package.json
@@ -48,6 +48,7 @@
     "@storybook/addon-links": "^6.0.0-beta.13",
     "@storybook/addons": "^6.0.0-beta.13",
     "@storybook/preset-create-react-app": "^3.0.0",
-    "@storybook/react": "^6.0.0-beta.13"
+    "@storybook/react": "^6.0.0-beta.13",
+    "storybook-addon-designs": "^5.2.1"
   }
 }
